Tidy up code to remove generics warnings
Change-Id: I4ef80254c6589bcc295fc05cfd354638aed2b22d